# rust-arduino-blink

./: Cargo.toml  README.adoc  avr-atmega2560.json  avr-atmega328p.json  justfile  toolchain.toml
.cargo/: config.toml
.github/workflows/: check-n-build.yml
src/: main.rs
