[package]
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"
name = "rust-arduino-blink"
version = "0.1.0"

[dependencies]
arduino-uno = {git = "https://github.com/Rahix/avr-hal", rev = "536c5d"}
# demolib = {path = "./demolib"}
embedded-hal = "0.2.3"
nb = "1.0.0"
panic-halt = "0.2"
ufmt = "0.1.0"

# Configure the build for minimal size
[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"

[patch.crates-io]
# XXX: Temporary fix for avr-rust/rust#148
ufmt = {git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9"}
